<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
    <View
        android:id="@+id/bottomNavDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintBottom_toTopOf="@id/iconMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    
    <ImageView
        android:id="@+id/iconMap"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_map"
        android:contentDescription="@string/cd_map"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconFeed"
        app:layout_constraintHorizontal_chainStyle="spread" />

    
    <ImageView
        android:id="@+id/iconFeed"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_feed"
        android:contentDescription="@string/cd_feed"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconMap"
        app:layout_constraintEnd_toStartOf="@id/iconProfile" />

    
    <ImageView
        android:id="@+id/iconProfile"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/cd_profile"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconFeed"
        app:layout_constraintEnd_toEndOf="parent" />

</merge>

